# fastgpt-report

./: .gitignore  AGENTS.md  CODE_WIKI.md  FastGPT知识库管理技术调研报告.docx  LICENSE  README.md  package.json  pnpm-lock.yaml  render.yaml  vite.config.js
demo/: app.py  pyproject.toml
demo/src/fastgpt_demo/chunkers/: __init__.py  (+1 more)
knowledge-process-api/: Dockerfile  README.md  app.py  pyproject.toml  test_embedding.py
knowledge-process-api/tests/: conftest.py  evaluate_results.py  parse_comparison.py  t.py  test_api.py  test_convert_endpoint.py  test_convert_models.py  test_deepseek.py  test_engine_dispatch.py  test_footnote_rule.py  test_health.py  test_html_parser.py  test_markdown_post_rule.py  test_multi_tool_dispatch.py  test_page_number_rule.py  test_parse_comparison.py  test_pdf_parsers.py  test_sensitive_enhanced.py  test_table_clean_rule.py  verify_backward_compat.py
knowledge-process-api/tests/cleaners/: test_backward_compat.py  test_clause_merge_rule.py  test_clause_numbering_rule.py  test_clean_pipeline.py  test_clean_profile.py  test_clean_rules_e2e.py  test_dedup_rule.py  test_html_clean_rule.py  test_insurance_sensitive_mode.py  test_insurance_table_rule.py  test_ocr_fix_rule.py  test_policy_meta_rule.py  test_toc_filter_rule.py  test_watermark_rule.py  verify_all_rules.py  verify_frontend_params.py  verify_insurance_e2e.py
knowledge-process-api/tests/converters/: test_convert_endpoint.py  test_convert_models.py  test_markitdown_converter.py
knowledge-process-api/tests/fixtures/: test.html
knowledge-process-api/tests/integration/: test_engine_dispatch.py
(+170 files in other folders)
