[project]
name = "knowledge-process-api"
version = "1.0.0"
description = "FastGPT 知识库文档处理 REST API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "mammoth>=1.8.0",
    "openpyxl>=3.1.0",
    "markdownify>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "python-pptx>=1.0.0",
    "chardet>=5.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.28.1",
    "requests>=2.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastgpt_demo"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "requests>=2.33.1",
]
